test/corpus/dict.txt
=================================
Items
=================================

dct = {"check": "other"}

------------------------------

    (module
      (unification
        (expression
          (primary_expression
            (identifier)))
        (expression
          (primary_expression
            (dictionary
              (key_value_pair
                (expression
                  (primary_expression
                    (string
                      (string_start)
                      (string_content)
                      (string_end))))
                (expression
                  (primary_expression
                    (string
                      (string_start)
                      (string_content)
                      (string_end))))))))))


=================================
Variable
=================================

dct = {"check": other}

------------------------------

    (module
      (unification
        (expression
          (primary_expression
            (identifier)))
        (expression
          (primary_expression
            (dictionary
              (key_value_pair
                (expression
                  (primary_expression
                    (string
                      (string_start)
                      (string_content)
                      (string_end))))
                (expression
                  (primary_expression

                    (identifier)

                      ))))))))


=================================
Identifier
=================================

dct = {other}

------------------------------

    (module
      (unification
        (expression
          (primary_expression
            (identifier)))
        (expression
          (primary_expression
          (dictionary
          (identifier)
          )
            ))))



=================================
Identifier to identifier
=================================

dct = {check: other}

------------------------------

    (module
      (unification
        (expression
          (primary_expression
            (identifier)))
        (expression
          (primary_expression
            (dictionary
              (key_value_pair
                (expression
                  (primary_expression
                    (identifier)
                      )
                      )
                (expression
                  (primary_expression

                    (identifier)

                      ))))))))
